Init of products routes, edit , delete (still have issues).

--- a/server/config/.env
+++ b/server/config/.env
@@ -1,7 +1,7 @@
 # This file holds global constants that are visible on the Server-side
 
 # Database
-DB_NAME = D01234567
+DB_NAME = ECOMMERCE
 
 
 # Access Levels
