--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mongoose": "^5.6.9",
+    "multer": "^1.4.5-lts.1",
     "session-file-store": "^1.4.0",
     "sessionstore": "^0.4.8"
   },
