server side update

--- a/server/config/.env
+++ b/server/config/.env
@@ -11,8 +11,9 @@ ACCESS_LEVEL_ADMIN = 2
 
 
 # Keys
-SESSION_PRIVATE_KEY = yourRandomKey
-
+#SESSION_PRIVATE_KEY = yourRandomKey
+JWT_PRIVATE_KEY = your_random_JSON_web_token
+JWT_EXPIRY = '7d'
 
 PASSWORD_HASH_SALT_ROUNDS = 3
 
@@ -23,3 +24,6 @@ SERVER_PORT = 4000
 
 # Local Host
 LOCAL_HOST = http://localhost:3000
+
+UPLOADED_FILES_FOLDER = ./uploads
+
