--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
+    "eslint": "^6.1.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
@@ -34,7 +36,6 @@
   },
   "description": "Server-side sessions example",
   "main": "index.js",
-  "devDependencies": {},
   "author": "Derek O Reilly",
   "license": "ISC"
 }
