--- a/client/package.json
+++ b/client/package.json
@@ -11,11 +11,12 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "eslint": "^6.1.0",
-    "jsonwebtoken": "^9.0.0",
     "font-awesome": "^4.7.0",
+    "jsonwebtoken": "^9.0.0",
     "react": "^16.9.0",
     "react-bootstrap": "^1.0.0-beta.11",
     "react-dom": "^16.9.0",
+    "react-paypal-js": "^0.0.1-security",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.0"
   },
