--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@paypal/react-paypal-js": "^7.8.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "eslint": "^6.1.0",
