paypal tested but need to recheck

--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "Ong ,Kosy and Raveena",
   "license": "ISC",
   "dependencies": {
+    "@paypal/react-paypal-js": "^7.8.2",
     "bcrypt": "^5.0.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
